PR-66 || added remove follower feature to FE & BE
